--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@
             </li>
           </ul>
         </div>
-
+<div class="footer-online-form">
         <form class="online-form">
           <p class="footer-input-paragraph">Subscribe</p>
           <input
@@ -325,6 +325,7 @@
             </svg>
           </button>
         </form>
+      </div>
       </div>
     </footer>
   </body>
