--- a/index.html
+++ b/index.html
@@ -427,25 +427,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-online-form">
+          <form class="online-form">
+            <p class="footer-input-paragraph">Subscribe</p>
+            <input
+              type="email"
+              class="online-input"
+              name="online-text"
+              placeholder="E-mail"
+              required
+            />
 
-        <form class="online-form">
-          <p class="footer-input-paragraph">Subscribe</p>
-          <input
-            type="email"
-            class="online-input"
-            name="online-text"
-            placeholder="E-mail"
-            required
-          />
+            <button type="submit" class="online-button">
+              Subscribe
 
-          <button type="submit" class="online-button">
-            Subscribe
-
-            <svg class="footer-inprut-icon" width="24" height="24">
-              <use href="./img/icons.svg#icon-send"></use>
-            </svg>
-          </button>
-        </form>
+              <svg class="footer-inprut-icon" width="24" height="24">
+                <use href="./img/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
