--- a/index.html
+++ b/index.html
@@ -337,42 +337,42 @@
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" wight="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./img/icons.svg#icon-customers1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" wight="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./img/icons.svg#icon-customers2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" wight="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./img/icons.svg#icon-customers3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" wight="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./img/icons.svg#icon-customers4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" wight="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./img/icons.svg#icon-customers5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" wight="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./img/icons.svg#icon-customers6"></use>
                 </svg>
               </a>
