--- a/index.html
+++ b/index.html
@@ -427,26 +427,26 @@
             </li>
           </ul>
         </div>
-        <div class="footer-online-form">
-          <form class="online-form">
-            <p class="footer-input-paragraph">Subscribe</p>
-            <input
-              type="email"
-              class="online-input"
-              name="online-text"
-              placeholder="E-mail"
-              required
-            />
 
-            <button type="submit" class="online-button">
-              Subscribe
+        <form class="online-form">
+          <p class="footer-input-paragraph">Subscribe</p>
 
-              <svg class="footer-inprut-icon" width="24" height="24">
-                <use href="./img/icons.svg#icon-send"></use>
-              </svg>
-            </button>
-          </form>
-        </div>
+          <input
+            type="email"
+            class="online-input"
+            name="online-text"
+            placeholder="E-mail"
+            required
+          />
+
+          <button type="submit" class="online-button">
+            Subscribe
+
+            <svg class="footer-inprut-icon" width="24" height="24">
+              <use href="./img/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -532,7 +532,7 @@
               </svg>
             </span>
             I accept the terms and conditions of the&nbsp;
-            <a href="">Privacy Policy</a></label
+            <a href="" class="input-href">Privacy Policy</a></label
           >
 
           <button type="submit" class="input-button">Send</button>
